2008-11-02  Tor Lillqvist  <tml@novell.com>

	* win32/Makefile.am (SUBDIRS): Add vs9.

2008-11-02  Tor Lillqvist  <tml@novell.com>

	Bug 558153 - Patch for .def files generation

	* win32/{vs8,vs9}/*.vcproj: Add &quot; around paths, making it
	possible to compile in a directory containing spaces. .def files
	generation is done for every configuration not only the "Debug"
	ones.

	Patch by Guillaume Duhamel.

2008-09-16  Tor Lillqvist  <tml@novell.com>

	* win32/vs9: New folder. Project files for use with MSVS9. Based
	on the MSVS8 project files is win32/vs8. Four configurations:
	Debug|Win32, Release|Win32, Debug|x64 and Release|x64. DLL names
	simplified to of the style glib-2-vs9.dll.

2008-09-15  Tor Lillqvist  <tml@novell.com>

	* win32/vs8/*.vcproj: Update to match the Makefile.am files. Drop
	G*_EXPORTS from PreprocessorDefinitions, nothing looks for such
	macros. Add G_DISABLE_DEPRECATED.

	Don't use Detect64BitPortabilityProblems as those warnings are
	misleading. They don't take into consideration ifdefs in
	glibconfig.h and elsewhere for _WIN64.

	Add PCRE_STATIC for glib to avoid exporting the pcre
	functions. Add DLL_EXPORT to glib to export also the GLIB_VAR
	variables that aren't mentioned in glib.symbols. Add G_LOG_DOMAIN
	for gobject.

	Drop the "win32" part from under "dependencies" so that the same
	project files can be used also for 64-bit compilation by just
	having a different "dependencies" folder containing 64-bit
	packages instead. At least, I hope it will work out some way like
	that. MSVS project files really are a pain to maintain.  Much
	information is typically copied for four different configurations
	"Debug|Win32", "Release|Win32", "Debug|x64" and "Release|x64"
	instead of having common stuff listed just once and only different
	parametrisations. Or am I missing something?
	
	Make the "Release" configuration work, too. Use correct character
	set for the gspawn-win32-helper programs. Use correct subsystem
	for the non-console one.
