@@ -1,8 +1,11 @@
 EXTRA_DIST = \
+	README \
 	gio.vcproj \
 	glib-genmarshal.vcproj \
 	glib.sln \
 	glib.vcproj \
 	gmodule.vcproj \
 	gobject.vcproj \
+	gspawn-win32-helper-console.vcproj \
+	gspawn-win32-helper.vcproj \
 	gthread.vcproj
